--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -18,6 +18,7 @@
 @import "content/contacts-section";
 @import "content/about-egg";
 @import "content/recipes-list";
+@import "content/recipes-detail";
 @import "content/tabs";
 @import "content/timer";
 @import "content/content";
