--- a/app/sass/content/recipes-detail.scss
+++ b/app/sass/content/recipes-detail.scss
@@ -53,3 +53,13 @@
 	}
 
 /*______ End Recipes detail ______*/
+
+
+.recipes-list,
+.recipe-detail {
+	.title-h3 {
+		margin-bottom: 24px;
+		font-size: 30px;
+		line-height: 36px;
+	}
+}
