рецепты + детальная рецептов

--- a/app/templates/recipes-detail.twig
+++ b/app/templates/recipes-detail.twig
@@ -17,9 +17,7 @@
 						 <div class="uk-grid">
 						 	<div class="uk-width-1-2@s">
 						 		<div class="recipe-detail__composition">
-							 		<img class="ellipse-abs-1 uk-visible@l" src="img/icon-svg/large-ellipse-3.svg" alt="">
-							 		<img class="ellipse-abs-2 uk-visible@l" src="img/icon-svg/large-ellipse-4.svg" alt="">
-						 			<h3 class="title-h3">Ингридиенты</h3>
+						 			<h3 class="title-h3">Ингредиенты</h3>
 						 			<ul class="disc-list">
 						 				<li>Яйцо куриное — 2 штуки</li>
 						 				<li>Сливки 25% — 2 столовые ложки</li>
